Finish Formatting of HTML better inc comments to make it more readable - WSF-6045

--- a/app/views/categories/_category_nav.html.erb
+++ b/app/views/categories/_category_nav.html.erb
@@ -1,6 +1,8 @@
+<%# Category items for category nav - this is rendered in the section nav layout (layouts/_section_nav.html.erb) %>
 <li><%=
   link_to(
     category.name,
     centre_products_category_path(@centre, super_cat.code, category.code),
   )
 %></li>
+<%# //Category items for category nav - this is rendered in the section nav layout (layouts/_section_nav.html.erb) %>
