--- a/app/views/categories/_super_cat_nav.html.erb
+++ b/app/views/categories/_super_cat_nav.html.erb
@@ -1,3 +1,4 @@
+<%# Sub category items for category nav - this is rendered in the section nav layout (layouts/_section_nav.html.erb) %>
 <li class="drop-down-menu drop-down-menu--alt drop-down-container drop-down-container--hover">
   <%=
     attrs = {'ng-class' => "{'is-active': (activeNavigationItem == '#{category.code}')}"}
@@ -26,3 +27,4 @@
     </div>
   </div>
 </li>
+<%# //Sub category items for category nav - this is rendered in the section nav layout (layouts/_section_nav.html.erb) %>
