--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -9,6 +9,7 @@
 
       <div class="grid grid--gutter-dbl">
 
+        <%# Concierge details %>
         <div class="grid__item non-palm-one-half">
 
           <h3>Concierge Desk</h3>
@@ -38,10 +39,13 @@
           <% end %>
 
         </div>
+        <%# //Concierge details %>
 
+        <%# Concierge image %>
         <div class="grid__item non-palm-one-half">
            <%= image_tag 'concierge.jpg', alt: '', quality: 25, fetch_format: 'auto' %>
         </div>
+        <%# //Concierge image %>
 
       </div>
 
@@ -54,10 +58,13 @@
 
     <div class="grid grid--gutter-dbl">
 
+      <%# Westfield gift card image %>
       <div class="grid__item non-palm-one-half">
         <%= image_tag 'gift-cards.jpg', alt: '', quality: 25, fetch_format: 'auto' %>
       </div>
+      <%# //Westfield gift card image %>
 
+      <%# Westfield gift card details %>
       <div class="grid__item non-palm-one-half">
         <h3>Westfield Gift Cards</h3>
 
@@ -89,6 +96,7 @@
         <%# //Uncomment when gift card filter is done %>
 
       </div>
+      <%# //Westfield gift card details %>
 
     </div>
 
