--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -1,4 +1,4 @@
-<%# Header %>
+<%# Header national %>
 <header class="header header--national" role="banner">
 
 	<%# Header secondary %>
@@ -113,4 +113,4 @@
 	<%# //Header secondary %>
 
 </header>
-<%# //Header %>
+<%# //Header national %>
