--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -1,6 +1,7 @@
 <% content_for :class_for_body, "page-detail-view" %>
 <% content_for :class_for_main, "container--wide" %>
 
+<%# Detail view container %>
 <% if in_lightbox? %>
   <div class="page-overlay"></div>
   <article role="article" class="detail-view detail-view--<%= params[:controller].singularize %>" tabindex="-1" role="dialog" aria-labelledby="detail-view__hdr" aria-hidden="true">
@@ -8,6 +9,7 @@
   <article role="article" class="detail-view detail-view--<%= params[:controller].singularize %>">
 <% end %>
 
+  <%# Detail view controls %>
   <% unless meta.hide_social_share %>
     <div class="detail-view__controls detail-view__divider">
       <%= render "/shared/social_share", kind: meta.kind, id: meta.id %>
@@ -19,8 +21,13 @@
       <% end %>
     </div>
   <% end %>
+  <%# //Detail view controls %>
 
+  <%# Detail view content %>
   <%= yield %>
+  <%# //Detail view content %>
+
 </article>
+<%# //Detail view container %>
 
 <%= parent_layout 'application' %>
