--- a/app/views/shared/_centre_hero_custom_styles.html.erb
+++ b/app/views/shared/_centre_hero_custom_styles.html.erb
@@ -1,3 +1,4 @@
+<%# Centre hero images for centre home page %>
 <% content_for :custom_styles do %>
   <style>
     <%# Hero image at this breakpoint (small) %>
@@ -16,3 +17,4 @@
     .old-ie <%= target %> {background-image: url(<%= hero_image(centre_id, 420, 1600) %>);}
   </style>
 <% end %>
+<%# //Centre hero images for centre home page %>
