--- a/app/views/shared/_hero_custom_styles.html.erb
+++ b/app/views/shared/_hero_custom_styles.html.erb
@@ -1,3 +1,4 @@
+<%# Hero images for sub pages %>
 <% content_for :custom_styles do %>
   <style>
     <%# Hero image at this breakpoint (small) %>
@@ -16,3 +17,4 @@
     .old-ie <%= target %> {background-image: url(<%= image_path("heroes/#{image}-lrg.jpg") %>);}
   </style>
 <% end %>
+<%# //Hero images for sub pages %>
