--- a/app/views/stores/_description.html.erb
+++ b/app/views/stores/_description.html.erb
@@ -1,3 +1,4 @@
+<%# Storefront header SEO description %>
 <%- if @store.description.present? %>
   <li class="storefront__flexslider-blurb">
     <div class="vert-align">
@@ -7,3 +8,4 @@
     </div>
   </li>
 <%- end %>
+<%# //Storefront header SEO description %>
