--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -9,7 +9,10 @@
   <%# No deals fallback message %>
   <div class="no-content-fallback-msg">
     <span class="icon icon--deals icon--flush-top" aria-hidden="true"></span>
-    <p><em class="h1">No deals at this centre</em> <span>See nearby centres</span></p>
+    <p>
+      <em class="h1">No deals at this centre</em>
+      <span>See nearby centres</span>
+    </p>
   </div>
   <%# //No deals fallback message %>
 
