--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -19,8 +19,9 @@
   </div>
   <%# //The Deal %>
 
-  <%# Store location & contact store %>
-  <div class="grid__item non-palm-one-half">
+  <%# Store location and contact store %>
+  <section class="grid__item non-palm-one-half" aria-labelledby="location-contact">
+    <h2 class="hide-visually" id="location-contact">Store location and contact details</h2>
 
     <%# Store location %>
     <div class="map-micello map-micello--static detail-view__divider">
@@ -53,8 +54,8 @@
     </div>
     <%# //Contact store %>
 
-  </div>
-  <%# //Store location & contact store %>
+  </section>
+  <%# //Store location and contact store %>
 
   <%# Divider %>
   <span class="detail-view__divider--col-line hide-fully--palm"></span>
@@ -64,8 +65,8 @@
 
 <%# Availability %>
 <% if @deal.stores and @deal.stores.size > 1 %>
-  <div class="island">
-    <h3 class="detail-view__hdr-sub detail-view__mrg-off hn"><%= @store.name %> also available at</h3>
+  <section class="island" aria-labelledby="availability">
+    <h2 class="detail-view__hdr-sub detail-view__mrg-off hn" id="availability"><%= @store.name %> also available at</h2>
     <ul class="detail-view__mrg-base">
       <% @deal.stores[0..2].each do |store| %>
         <% unless store.id == @store.id %>
@@ -78,20 +79,20 @@
         <% end %>
       <% end %>
     </ul>
-  </div>
+  </section>
 <% end %>
 <%# //Availability %>
 
 <%# Fine print %>
 <% if @deal.terms_and_conditions and !@deal.terms_and_conditions.empty? %>
-  <div class="island toggle-content js-toggle-content js-hide-show<% if @deal.stores and @deal.stores.size > 1 %> detail-view__divider detail-view__divider--top<% end %>">
-    <h2 class="detail-view__hdr-sub hn">The fine print</h2>
+  <section class="island toggle-content js-toggle-content js-hide-show<% if @deal.stores and @deal.stores.size > 1 %> detail-view__divider detail-view__divider--top<% end %>" aria-labelledby="fine-print">
+    <h2 class="detail-view__hdr-sub hn" id="fine-print">The fine print</h2>
     <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt">
       <% @deal.terms_and_conditions.each do |paragraph| %>
         <% unless paragraph.empty? %><p><%= paragraph %></p><% end %>
       <% end %>
     </div>
-  </div>
+  </section>
 <% end %>
 <%# //Fine print %>
 
@@ -100,8 +101,8 @@
   <%= javascript_include_tag 'jquery-extensions/jquery.toggle-content' %>
 
   <script>
+    // Initialise 'Toggle content' plugin
     $(function() {
-      // Run 'Toggle content' plugin
       $('.js-toggle-content').toggleContent({
         btnTxtOpen: 'Read the fine print <span aria-hidden="true" class="icon icon--arrow-down-full icon--lrg"></span>',
         btnTxtClose: 'Collapse the fine print <span aria-hidden="true" class="icon icon--arrow-up-full icon--lrg"></span>'
