--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,10 @@
   <%# No events fallback message %>
   <div class="no-content-fallback-msg">
     <span class="icon icon--events icon--flush-top" aria-hidden="true"></span>
-    <p><em class="h1">No events at this centre</em> <span>See nearby centres</span></p>
+    <p>
+      <em class="h1">No events at this centre</em>
+      <span>See nearby centres</span>
+    </p>
   </div>
   <%# //No events fallback message %>
 
