--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -1,13 +1,17 @@
 <article class="tile tile--<%= result.kind.pluralize %> box js-tile test-tile" role="article">
 
+  <%# Tile indentifier for centre home page only %>
   <% unless params[:controller] == result.kind.pluralize %>
     <em class="hide-visually"><%= result.kind.titlecase %></em>
   <% end %>
+  <%# //Tile indentifier for centre home page only %>
 
   <%= link_to yield, tile_url(@centre, result), target: "_self" %>
 
+  <%# Tile controls %>
   <div class="tile__controls js-tile-controls">
     <%= render "/shared/social_share", kind: result.kind, id: result.id %>
   </div>
+  <%# //Tile controls %>
 
 </article>
