--- a/app/views/movies/_session_list.html.erb
+++ b/app/views/movies/_session_list.html.erb
@@ -3,7 +3,9 @@
   <ul id="<%= time_of_day.downcase %>_sessions">
     <% sessions.each do |session| %>
       <li>
-        <span class="<%= session.session_type.to_s.downcase.gsub(/ /, '_') %>"><%= link_to session.start_time.strftime("%l:%M"), session.booking_url %></span>
+        <span class="<%= session.session_type.to_s.downcase.gsub(/ /, '_') %>">
+          <%= link_to session.start_time.strftime("%l:%M"), session.booking_url %>
+        </span>
       </li>
     <% end %>
   </ul>
