--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,28 +4,31 @@
   <div class="island detail-view__divider">
 
     <header class="detail-view__mrg-base">
+
       <%# Movie title %>
       <h1 class="detail-view__hdr hn test-title" itemprop="summary"><%= @movie.title %></h1>
       <%# //Movie title %>
 
       <%# Movie classification %>
       <div class="detail-view__meta detail-view__divider detail-view__divider--top-btm islet-ends">
-        <em><%= @movie.classification %> rating</em>
+        <small><%= @movie.classification %> rating</small>
       </div>
       <%# //Movie classification %>
+
     </header>
 
-    <%# Movie main image %>
+    <%# Movie image %>
     <% if @movie.cloudinary_public_id %>
-      <div class="detail-view__media detail-view__mrg-base">
+      <section class="detail-view__media detail-view__mrg-base" aria-labelledby="image">
+        <h2 class="hide-visually" id="image">Image</h2>
         <%= cl_image_tag(@movie.cloudinary_public_id, alt: '', width: 600, height: 400, crop: 'limit', format: 'jpg', fetch_format: 'auto') %>
-      </div>
+      </section>
     <% end %>
-    <%# //Movie main image %>
+    <%# //Movie image %>
 
     <%# Movie synopsis %>
-    <section aria-labelledby="movie-synopsis">
-      <h2 class="detail-view__hdr-sub hn" id="movie-synopsis">Synopsis</h2>
+    <section aria-labelledby="synopsis">
+      <h2 class="detail-view__hdr-sub hn" id="synopsis">Synopsis</h2>
       <p itemprop="description"><%= @movie.synopsis %></p>
     </section>
     <%# //Movie synopsis %>
@@ -34,8 +37,8 @@
   <%# //Movie details %>
 
   <%# Session times %>
-  <section class="detail-view__schedule island" aria-labelledby="movie-session-times">
-    <h2 class="detail-view__hdr-sub hn" id="movie-session-times">Session Times</h2>
+  <section class="detail-view__schedule island" aria-labelledby="session-times">
+    <h2 class="detail-view__hdr-sub hn" id="session-times">Session Times</h2>
 
     <p>Select a session to purchase tickets at <%= @cinema.name %></p>
 
@@ -44,12 +47,15 @@
         <dt>
           <%= date.strftime("%A") %>
           <em class="timeline__date">
-            <span><%= date.strftime("%e") %></span> <abbr title="<%= date.strftime("%B") %>"><%= date.strftime("%b") %></abbr>
+            <span><%= date.strftime("%e") %></span>
+            <abbr title="<%= date.strftime("%B") %>"><%= date.strftime("%b") %></abbr>
           </em>
         </dt>
         <% sessions.each do |session| %>
           <dd>
-            <a href="<%= session.booking_url %>" rel="external" target="_blank"><time datetime="<%= Time.parse(session.start_time).strftime("%Y-%m-%dT%H:%M") %>" itemprop="startDate"><%= Time.parse(session.start_time).to_s(:hour_minute_period) %></time></a>
+            <a href="<%= session.booking_url %>" rel="external" target="_blank">
+              <time datetime="<%= Time.parse(session.start_time).strftime("%Y-%m-%dT%H:%M") %>" itemprop="startDate"><%= Time.parse(session.start_time).to_s(:hour_minute_period) %></time>
+            </a>
             <%= "[#{session.session_type}]" if session.session_type %>
           </dd>
         <% end %>
