--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -1,17 +1,27 @@
 <div class="island detail-view__divider">
+
   <header class="detail-view__mrg-base">
+
+    <%# Notice title %>
     <h1 class="detail-view__hdr hn"><%= @notice.name.truncate(65, '&#8230;') %></h1>
+    <%# //Notice title %>
 
     <%# Notice meta %>
     <div class="detail-view__meta detail-view__divider detail-view__divider--top-btm islet-ends">
-      <time datetime="<%= @notice.date('%Y-%m-%d') %>" pubdate><%= @notice.date.day %><abbr title="<%= @notice.date('%B') -%>"> <%= @notice.date('%b') -%></abbr> <%= @notice.date.year  %></time>
+      <time datetime="<%= @notice.date('%Y-%m-%d') %>" pubdate>
+        <%= @notice.date.day %>
+        <abbr title="<%= @notice.date('%B') -%>"> <%= @notice.date('%b') -%></abbr>
+        <%= @notice.date.year  %>
+      </time>
     </div>
     <%# //Notice meta %>
+
   </header>
 
   <%# Notice image %>
   <% if @notice.image_ref.present? -%>
-    <div class="detail-view__media detail-view__mrg-base">
+    <section class="detail-view__media detail-view__mrg-base" aria-labelledby="image">
+      <h2 class="hide-visually" id="image">Image</h2>
       <%= cl_image_tag @notice.image_ref,
           alt: @notice.img_alt_text ? @notice.img_alt_text : "",
           width: 638,
@@ -19,15 +29,17 @@
           format: :jpg,
           fetch_format: :auto
           %>
-    </div>
+    </section>
   <%- end %>
   <%# //Notice image %>
 
   <%# Notice description %>
-  <div class="detail-view__desc">
+  <section class="detail-view__desc" aria-labelledby="description">
+    <h2 class="hide-visually" id="description">Description</h2>
     <% to_paragraphs(@notice.detail).each do |text| %>
       <p><%= text %></p>
     <%- end %>
-  </div>
+  </section>
   <%# //Notice description %>
+
 </div>
