--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
 
 <h1 class="hide-visually">Products</h1>
 
-<%# 'Super_cat' and 'Category' %>
+<%# 'Super category' and 'Category' %>
 <script type="text/ng-template" id="CategoryItemTemplate">
   <div class="drop-down-menu__hdr drop-down-menu__divider islet">
     <h3>{{search.categories.title}}</h3>
@@ -27,7 +27,7 @@
     </li>
   </ul>
 </script>
-<%# //'Super_cat' and 'Category' %>
+<%# //'Super category' and 'Category' %>
 
 <%# Category %>
 <script type="text/ng-template" id="SubCategoryTemplate">
@@ -67,7 +67,10 @@
     <div class="drop-down-menu drop-down-container">
 
       <%# Drop down trigger (narrow view) %>
-      <button type="button" ng-click="showFilterButtons" toggle-visibility="filters" class="filters__hide-wide drop-down-menu__trigger btn btn--main btn--main-white btn--pointer btn--pointer-padding-med">Filter<span class="icon icon--lrg icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span></button>
+      <button type="button" ng-click="showFilterButtons" toggle-visibility="filters" class="filters__hide-wide drop-down-menu__trigger btn btn--main btn--main-white btn--pointer btn--pointer-padding-med">
+        Filter
+        <span class="icon icon--lrg icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
+      </button>
       <%# //Drop down trigger (narrow view) %>
 
       <%# Drop down target (narrow view) %>
@@ -351,7 +354,10 @@
     </div>
     <ul class="horiz-list">
       <li ng-repeat="filter in search.appliedFilters">
-        <button type="button" ng-click="removeSelectedFilter(filter)" class="btn"><span class="txt-truncate">{{ filter.title }}</span><span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span></button>
+        <button type="button" ng-click="removeSelectedFilter(filter)" class="btn">
+          <span class="txt-truncate">{{ filter.title }}</span>
+          <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
+        </button>
       </li>
       <li>
         <a href="<%= pb_path %>" ng-click="removeAllFilters()" class="btn btn--faux-link">Clear all</a>
@@ -361,25 +367,28 @@
   <%# //Applied filters %>
 </script>
 
-<%# Expose Product categories for non JS users %>
+<%# Expose product categories for non JS users %>
 <noscript>
   <nav role="navigation" class="island box mrg-base mrg-base-top">
     <h2>Product categories</h2>
     <ul class="mrg-base">
       <% @search.categories.each do |category| %>
-        <li><%= link_to category.name, url_for(:controller => params[:controller], :action => params[:action], :params => {category.url_args.keys.first => category.url_args.values.first}) %></li>
+        <li>
+          <%= link_to category.name, url_for(:controller => params[:controller], :action => params[:action], :params => {category.url_args.keys.first => category.url_args.values.first}) %>
+        </li>
       <% end %>
     </ul>
-
     <h2>Brands at Westfield</h2>
     <ul>
       <% @search.brands.each do |brand| %>
-        <li><%= link_to brand.name, url_for(:controller => params[:controller], :action => params[:action], :params => {brand: brand.code}) %></li>
+        <li>
+          <%= link_to brand.name, url_for(:controller => params[:controller], :action => params[:action], :params => {brand: brand.code}) %>
+        </li>
       <% end %>
     </ul>
   </nav>
 </noscript>
-<%# //Expose Product categories for non JS users %>
+<%# //Expose product categories for non JS users %>
 
 <p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to use the product filters, as a fallback you can filter via the <strong>Product categories</strong> above. <a href="http://enable-javascript.com/" rel="external" target="_blank">Visit here</a> for instructions on how to enable JavaScript.</p>
 
