--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,12 +6,13 @@
 
 <div class="detail-view__divider--non-palm detail-view__divider--col grid grid--gutterless grid--rev-stack grid--rev grid--flush">
 
-  <%# Product name, brand, price, location and contact %>
   <div class="grid__item non-palm-two-fifths">
 
     <%# Product name, brand and price %>
     <header class="detail-view__divider island">
+
       <h1 class="detail-view__hdr hn detail-view__mrg-half"><%= @product.name %></h1>
+
       <p class="detail-view__meta">
         <span class="detail-view__subtle-txt">from</span>
         <%= @product.retail_chain_name %>
@@ -26,12 +27,14 @@
           <em><%= Money.new(@product.sale_price).format %></em>
         <%- end -%>
       </p>
+
     </header>
     <%# //Product name, brand and price %>
 
+    <%# Product location, contact and store link %>
     <% if @centre.present? or @product.primary_retailer_product_url.present? %>
-      <section aria-labelledby="product-store">
-        <h2 class="hide-visually" id="product-store">Store location and contact</h2>
+      <section aria-labelledby="location-contact-storelink">
+        <h2 class="hide-visually" id="location-contact-storelink">Store location, contact details and store link</h2>
 
         <%# Check if a product is available at a centre %>
         <% if @centre.present? && @centre_stores.empty? %>
@@ -60,12 +63,26 @@
 
           <%# Contact store %>
           <div class="detail-view__divider island-sides islet-ends island--fill island--center">
+
+            <%# Palm version %>
             <span class="hide-fully--non-palm">
               <%= phone_link store_phone_number(@centre_stores, @product.retail_chain), class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
-                <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @product.retail_chain_name %></strong>
+                <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
+                <strong>Call <%= @product.retail_chain_name %></strong>
               <% end %>
             </span>
-            <p class="detail-view__check-avble hide-fully--palm"><span class="detail-view__subtle-txt">Check store availability</span> <em><span class="icon icon--phone icon--lrg icon--spacing" aria-hidden="true"></span><%=  phone_format store_phone_number(@centre_stores, @product.retail_chain) %></em></p>
+            <%# //Palm version %>
+
+            <%# Non-palm version %>
+            <p class="detail-view__check-avble hide-fully--palm">
+              <span class="detail-view__subtle-txt">Check store availability</span>
+              <em>
+                <span class="icon icon--phone icon--lrg icon--spacing" aria-hidden="true"></span>
+                <%= phone_format store_phone_number(@centre_stores, @product.retail_chain) %>
+              </em>
+            </p>
+            <%# //Non-palm version %>
+
           </div>
           <%# //Contact store %>
 
@@ -86,18 +103,20 @@
           </div>
         <%- end -%>
         <%# //Store link %>
+
       </section>
     <%- end -%>
+    <%# //Product location, contact and store link %>
+
   </div>
-  <%# //Product name, brand, price, location and contact %>
 
   <%# Product images %>
   <div class="grid__item non-palm-three-fifths">
 
-    <section class="detail-view__divider--palm island-ends" aria-labelledby="product-image">
-      <h2 class="hide-visually" id="product-image">Images</h2>
+    <section class="detail-view__divider--palm island-ends" aria-labelledby="images">
+      <h2 class="hide-visually" id="images">Images</h2>
 
-      <%# Flexslider %>
+      <%# Carousel - large image %>
       <div class="flexslider flexslider--lrg-img flexslider--gallery">
         <ul class="slides">
           <%- @product.images[0...4].each do |img| -%>
@@ -111,6 +130,9 @@
           <%- end -%>
         </ul>
       </div>
+      <%# //Carousel - large image %>
+
+      <%# Carousel - thumbnails %>
       <div class="flexslider flexslider--thumbs flexslider--gallery">
         <ul class="slides">
           <%- @product.images[0...4].each do |img| -%>
@@ -124,13 +146,16 @@
           <%- end -%>
         </ul>
       </div>
-      <%# //Flexslider %>
+      <%# //Carousel - thumbnails %>
+
     </section>
 
   </div>
   <%# //Product images %>
 
+  <%# Divider %>
   <span class="detail-view__divider--col-line hide-fully--palm"></span>
+  <%# //Divider %>
 
 </div>
 
@@ -172,8 +197,8 @@
 
 <%# Availability %>
 <%- if @product_centres.present? -%>
-<section class="detail-view__divider--top-btm detail-view__divider--top island" aria-labelledby="available">
-  <h2 class="detail-view__hdr-sub detail-view__mrg-off hn" id="available"><%= @product.retail_chain_name %> also available at</h2>
+<section class="detail-view__divider--top-btm detail-view__divider--top island" aria-labelledby="availability">
+  <h2 class="detail-view__hdr-sub detail-view__mrg-off hn" id="availability"><%= @product.retail_chain_name %> also available at</h2>
   <ul class="detail-view__centres">
     <%- @product_centres.each do |centre| -%>
       <li>
@@ -193,7 +218,9 @@
 <%- content_for :javascript do -%>
   <%# Run 'Flexslider' plugin %>
   <%= javascript_include_tag 'flexslider/jquery.flexslider' %>
+
   <script>
+    // Initialise 'Flexslider' plugin
     $(window).load(function() {
 
       // Get the count of flexslider items
