--- a/app/views/shared/_social_share_inner.html.erb
+++ b/app/views/shared/_social_share_inner.html.erb
@@ -1,37 +1,52 @@
-<%# Social share %>
+<%# Social share list %>
 <ul class="drop-down horiz-list horiz-list--fit horiz-list--center">
 
   <%# Facebook %>
   <li class="social-share__facebook">
-    <a href="http://www.facebook.com/sharer/sharer.php?u=<%=URI::encode url %>&t=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank"><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a>
+    <a href="http://www.facebook.com/sharer/sharer.php?u=<%=URI::encode url %>&t=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank">
+      <span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="hide-visually">Facebook</span>
+    </a>
   </li>
   <%# //Facebook %>
 
   <%# Twitter %>
   <li class="social-share__twitter">
-    <a href="http://twitter.com/intent/tweet?url=<%=URI::encode url %>&text=<%= URI::encode twitter_title || title %> via @WestfieldAU" rel="external" target="_blank"><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Twitter</span></a>
+    <a href="http://twitter.com/intent/tweet?url=<%=URI::encode url %>&text=<%= URI::encode twitter_title || title %> via @WestfieldAU" rel="external" target="_blank">
+      <span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="hide-visually">Twitter</span>
+    </a>
   </li>
   <%# //Twitter %>
 
   <%# Google+ %>
   <li class="social-share__google">
-    <a href="https://plus.google.com/share?url=<%=URI::encode url %>" rel="external" target="_blank"><span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Google+</span></a>
+    <a href="https://plus.google.com/share?url=<%=URI::encode url %>" rel="external" target="_blank">
+      <span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="hide-visually">Google+</span>
+    </a>
   </li>
   <%# //Google+ %>
 
   <% if defined?(image) && !image.blank? %>
     <%# Pinterest %>
     <li class="social-share__pinterest">
-      <a href="http://pinterest.com/pin/create/button/?url=<%=URI::encode url %>&media=<%=URI::encode image %>&description=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
+      <a href="http://pinterest.com/pin/create/button/?url=<%=URI::encode url %>&media=<%=URI::encode image %>&description=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank">
+        <span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span>
+        <span class="hide-visually">Pinterest</span>
+      </a>
     </li>
     <%# //Pinterest %>
   <% end -%>
 
   <%# Email %>
   <li class="social-share__email">
-    <a href="mailto:?<%=URI::encode "subject=Look what I found at Westfield&body=I would like to share this #{email_body || ''} from Westfield with you. What do you think?\n\n#{title}" %> <%=URI::encode "at #{@centre.name}" if @centre.present? %><%=URI::encode "\n\n#{url}" %>"><span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Email</span></a>
+    <a href="mailto:?<%=URI::encode "subject=Look what I found at Westfield&body=I would like to share this #{email_body || ''} from Westfield with you. What do you think?\n\n#{title}" %> <%=URI::encode "at #{@centre.name}" if @centre.present? %><%=URI::encode "\n\n#{url}" %>">
+      <span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="hide-visually">Email</span>
+    </a>
   </li>
   <%# //Email %>
 
 </ul>
-<%# //Social share %>
+<%# //Social share list %>
