--- a/app/views/shared/_stylesheets_global.html.erb
+++ b/app/views/shared/_stylesheets_global.html.erb
@@ -3,9 +3,9 @@
 <%# //Fonts %>
 
 <%# Modern browser CSS %>
-<!--[if gt IE 8]><!--><link rel="stylesheet" href="<%= stylesheet_path('application') %>"><!--<![endif]-->
+<!--[if gt IE 8]><!--><link href="<%= stylesheet_path('application') %>" rel="stylesheet"><!--<![endif]-->
 <%# //Modern browser CSS %>
 
 <%# Old IE CSS (IE < 9) %>
-<!--[if (lt IE 9) & (!IEMobile)]><link rel="stylesheet" href="<%= stylesheet_path('old-ie') %>"><![endif]-->
+<!--[if (lt IE 9) & (!IEMobile)]><link href="<%= stylesheet_path('old-ie') %>" rel="stylesheet"><![endif]-->
 <%# //Old IE CSS (IE < 9) %>
