--- a/app/views/shared/micello_maps/_map.html.erb
+++ b/app/views/shared/micello_maps/_map.html.erb
@@ -1,10 +1,26 @@
+<%# Fallback message for non JS users %>
 <p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to view this map. <a href="http://enable-javascript.com/" rel="external" target="_blank">Visit here</a> for instructions on how to enable JavaScript.</p>
+<%# //Fallback message for non JS users %>
+
+<%# Map canvas %>
 <div id="map-micello-api" class="map-micello__api js-disabled-hide">
-  <span class="preloader preloader--middle preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span>
+
+  <%# Preloader %>
+  <span class="preloader preloader--middle preloader--light">
+    <span class="preloader__spinner"></span>
+    <em class="hide-visually">Loading, please wait&#8230;</em>
+  </span>
+  <%# //Preloader %>
+
 </div>
+<%# //Map canvas %>
+
+<%# Render the map in the canvas %>
 <script type="text/html-template" class="map-micello__overlay-wrap">
   <%= render partial: 'shared/micello_maps/popup' %>
 </script>
+<%# //Render the map in the canvas %>
+
 <% content_for :javascript do %>
   <%= cloudinary_js_config %>
   <% if load_immediately %>
