--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -1,4 +1,7 @@
+<%# Tile deal meta %>
 <div class="tile__meta">
+
+  <%# Tile deal logo %>
   <% if result.logo %>
     <%= fetch_image_tag result.logo,
       alt: "#{result.store_name} logo",
@@ -8,12 +11,23 @@
       crop: :pad,
       format: :auto
     %>
+  <%# //Tile deal logo %>
+
+  <%# Tile deal store name %>
   <% else %>
     <h3 class="tile__meta__hdr txt-truncate"><%= result.store_name %></h3>
   <% end %>
-  <p class="tile__meta__desc txt-hyphenate"><%= result.title %></p>
-</div>
+  <%# //Tile deal store name %>
 
+  <%# Tile deal title %>
+  <p class="tile__meta__desc txt-hyphenate"><%= result.title %></p>
+  <%# //Tile deal title %>
+
+</div>
+<%# //Tile deal meta %>
+
+<%# Tile deal icon %>
 <span class="tile__meta__icon">
   <span class="icon icon--deals" aria-hidden="true"></span>
 </span>
+<%# //Tile deal icon %>
