--- a/app/views/stores/_header_without_banner.html.erb
+++ b/app/views/stores/_header_without_banner.html.erb
@@ -1,14 +1,22 @@
+<%# Storefront header (no banner) %>
 <header>
+
+  <%# Storefront name and SEO description carousel %>
   <div class="flexslider flexslider--contain-controls is-no-store-banner">
     <ul class="slides">
       <li>
         <div class="storefront__flexslider-storename vert-align">
           <div class="vert-align__inner">
-            <h1<% if @store.name.length > 58 %> class="is-long-store-name"<% end %>><span itemprop="name"><%= @store.name %></span></h1>
+            <h1<% if @store.name.length > 58 %> class="is-long-store-name"<% end %>>
+              <span itemprop="name"><%= @store.name %></span>
+            </h1>
           </div>
         </div>
       </li>
       <%= render 'description' %>
     </ul>
   </div>
+  <%# //Storefront name and SEO description carousel %>
+
 </header>
+<%# //Storefront header (no banner) %>
