--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -118,7 +118,10 @@
                 <div class="stores-list__store-name test-store">
                   <strong><%= link_to store.name, (centre_store_url @centre.code, store.retailer_code, store.id), class: 'js-pjax-link-stores' %></strong>
                   <%# Phone no %>
-                  <span class="hide-fully--palm"><span class="hide-visually">Call store: </span><%= phone_format store.phone_number %></span>
+                  <span class="hide-fully--palm">
+                    <span class="hide-visually">Call store: </span>
+                    <%= phone_format store.phone_number %>
+                  </span>
                   <%# //Phone no %>
                   <%# [BACKEND] inject this `span` when a category filter has been applied %>
                   <%# <span class="icon icon--pin icon--flush-top"></span> %>
@@ -134,7 +137,9 @@
                           <span class="preloader__spinner"></span>
                           <em class="hide-visually">Loading, please wait&#8230;</em>
                         </span>
-                        <noscript><img src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, crop: :pad, background: 'rgb:FFFFFF', fetch_format: 'auto') %>" alt="<%= "#{store.name} logo" %>"></noscript>
+                        <noscript>
+                          <img src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, crop: :pad, background: 'rgb:FFFFFF', fetch_format: 'auto') %>" alt="<%= "#{store.name} logo" %>">
+                        </noscript>
                       </div>
                     </div>
                   </div>
