BOXING DAY FIX - Remove store hours from store fronts and micello maps popup as they are not showing closed stores correctly

--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -10,7 +10,7 @@
     <%% } %>
     <div class="map-micello__overlay__retailer__body">
       <em class="map-micello__hdr txt-truncate"><%%- name %></em>
-      <p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time></p>
+      <!--p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time></p-->
     </div>
   </div>
   <%%  if(storefront_path) {  %>
