Fix product filter back button icon span not closed

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -50,7 +50,7 @@
 <%# Back button %>
 <script type="text/ng-template" id="FilterItemBackButton">
   <button type="button" ng-click="closeFilters()" class="filters__hide-wide btn">
-    <span class="icon icon--arrow-left-big icon--lrg" aria-hidden="true">
+    <span class="icon icon--arrow-left-big icon--lrg" aria-hidden="true"></span>
     <span class="hide-visually">Back</span>
   </button>
 </script>
