--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -29,7 +29,7 @@
   <div class="nav-contextual js-nav-contextual js-viewport-check">
     <div class="nav-contextual__clip">
       <div class="nav-contextual__clip__inner">
-        <ul class="nav-contextual__list tab__nav horiz-list js-nav-contextual-list">
+        <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
           <% days(@movie_sessions.last['start_time'], @centre.code, params['date']).each do |day| %><li><%= day %></li><% end %>
         </ul>
       </div>
