Doing the front end dev to add product collection icon to tiles

--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -39,6 +39,15 @@
 /* Products */
 .icon--products:before {content: "\e000";}
 
+/* Product collection */
+.icon--product-collection:before {content: "\e040";}
+
+/* Product occasion */
+.icon--product-occasion:before {content: "\e03f";}
+
+/* Product occasion 2 */
+.icon--product-occasion2:before {content: "\e03e";}
+
 /* Deals */
 .icon--deals:before {content: "\e001";}
 
