--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -15,7 +15,7 @@
 
   <%# Tile canned search icon %>
   <span class="tile__meta__icon">
-    <span class="icon icon--<%= result.icon %>" aria-hidden="true"></span>
+    <span class="icon icon--<%= result.icon %> icon--lrg" aria-hidden="true"></span>
   </span>
   <%# //Tile canned search icon %>
 
@@ -28,3 +28,7 @@
 
 </div>
 <%# //Tile canned search meta %>
+
+<%# Alternative icon for "Collections" and "Occasions" %>
+<span class="tile__icon-alt icon icon--product-collection icon--flush-top icon--lrg" aria-hidden="true"></span>
+<%# //Alternative icon for "Collections" and "Occasions" %>
