--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -28,6 +28,6 @@
 
 <%# Tile deal icon %>
 <span class="tile__meta__icon">
-  <span class="icon icon--deals" aria-hidden="true"></span>
+  <span class="icon icon--deals icon--lrg" aria-hidden="true"></span>
 </span>
 <%# //Tile deal icon %>
