--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -14,7 +14,7 @@
 
   <%# Tile event icon %>
   <span class="tile__meta__icon">
-    <span class="icon icon--events" aria-hidden="true"></span>
+    <span class="icon icon--events icon--lrg" aria-hidden="true"></span>
   </span>
   <%# Tile event icon %>
 
