--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -17,7 +17,7 @@
 
   <%# Tile product icon %>
   <span class="tile__meta__icon">
-    <span class="icon icon--products" aria-hidden="true"></span>
+    <span class="icon icon--products icon--lrg" aria-hidden="true"></span>
   </span>
   <%# //Tile product icon %>
 
